add first section

--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@ margin-top: 10px;
     margin-top: 70px;
   
 }
-@media screen and (max-width:576px) {
+@media screen and (max-width:576px)  {
     nav{
         flex-direction: column;
     }
@@ -139,12 +139,12 @@ background-position: center;
 
 .btn{
     margin-left: 150px;
-    border-radius: 41px;
+    
     margin-bottom: 30px;
     
 
 font-size: 0.6rem;
-font-weight: 700;
+
 padding: 2px 5px;
 
 
@@ -162,11 +162,43 @@ gap: 6px;
 
 }
 .icon{
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     width: 60%;
+    padding: 0px 10px;
     row-gap: 30px;
+    justify-content: center;
+    align-content: center;
     justify-items: center;
     align-items: center;
     overflow: hidden;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
+}
+
+@media screen and (max-width:305px)  {
+    .icon{
+        grid-template-columns: repeat(1, 1fr);
+        
+    }
+    .banner-img{
+        padding-left: 60px;
+        
+    
+    background-position: center;
+
+
+}
+.btn{
+    margin-left: 100px;
+    
+    margin-bottom: 5px;
+    
+
+font-size: 0.4rem;
+
+padding: 2px 5px;
+
+
+
 }
